tests/output/coverage_report.txt
Warning: This is a nightly build of Foundry. It is recommended to use the latest stable version. To mute this warning set `FOUNDRY_DISABLE_NIGHTLY_WARNING` in your environment. 

Warning: optimizer settings and `viaIR` have been disabled for accurate coverage reports.
If you encounter "stack too deep" errors, consider using `--ir-minimum` which enables `viaIR` with minimum optimization resolving most of the errors
Compiling 31 files with Solc 0.8.20
Solc 0.8.20 finished in 2.25s
Error: Compiler run failed:
Error: Compiler error (C:\Users\circleci\project\libsolidity\codegen\LValue.cpp:56):Stack too deep. Try compiling with `--via-ir` (cli) or the equivalent `viaIR: true` (standard JSON) while enabling the optimizer. Otherwise, try removing local variables.
   --> contracts/core/CircleFactory.sol:128:19:
    |
128 |             name: name,
    |                   ^^^^
